# kiraterm

./: Cargo.toml  README.md  run.sh  shell.nix
src/: app.rs  font.rs  main.rs  particles.rs  pty.rs  renderer.rs  vt.rs
src/shaders/: particles.wgsl  post.wgsl  text.wgsl
