[package]
name = "kiraterm"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
fontdb = "0.21"
portable-pty = "0.8"
vte = "0.13"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
